[gd_scene load_steps=10 format=3 uid="uid://bw3jtu2va5p6h"]

[ext_resource type="Script" path="res://Game/Intro Scene/IntroScene.gd" id="1_dg5f4"]
[ext_resource type="Texture2D" uid="uid://cncpqawurugse" path="res://Assets/Background/worldmapright.png" id="2_dowsn"]

[sub_resource type="SystemFont" id="SystemFont_aq382"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_man7o"]
font_names = PackedStringArray("Avenir")

[sub_resource type="SystemFont" id="SystemFont_8p4iv"]
font_names = PackedStringArray("Avenir")

[sub_resource type="SystemFont" id="SystemFont_r7gca"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6d80m"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wv0so"]
bg_color = Color(0.831373, 0.517647, 0.164706, 1)

[sub_resource type="SystemFont" id="SystemFont_3jp3n"]
font_names = PackedStringArray("Impact")

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dg5f4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dowsn")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
vertical = true

[node name="Control" type="Control" parent="MarginContainer/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_aq382")
theme_override_font_sizes/font_size = 60
text = "FLAGSHIP"
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_man7o")
theme_override_font_sizes/font_size = 20
text = "Welcome to Flagship!
This game challenges players to identify country
flags from multiple choice options within a 60 second time limit. 
"
vertical_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_8p4iv")
theme_override_font_sizes/font_size = 20
text = "Guess correctly the first time and you will earn a point.
If you guess incorrectly, worry not, you will still
be able to guess and learn the country of the displayed flag. "

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 487.0
offset_right = 220.0
offset_bottom = 537.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_r7gca")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6d80m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wv0so")
text = "Play Flagship"

[node name="AboutButton" type="Button" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 543.0
offset_right = 220.0
offset_bottom = 593.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_r7gca")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6d80m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wv0so")
text = "About Flagship"

[node name="Label4" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -559.0
offset_top = 281.0
offset_right = 553.0
offset_bottom = 307.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_3jp3n")
theme_override_font_sizes/font_size = 20
text = "Maya 2024"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_about_button_pressed"]
